--- a/src/main/webapp/WEB-INF/pages/css/style.css
+++ b/src/main/webapp/WEB-INF/pages/css/style.css
@@ -1,5 +1,4 @@
 header {
-
     height: 45px;
     background: #A4D3E0;
     margin-right: 100%;
@@ -13,7 +12,7 @@ li{
     font-size: 15px;
 }
 h1{
-    margin-left: 20%;
+    margin-left: 25%;
     color: lightseagreen;
 }
 ul{
@@ -21,6 +20,20 @@ ul{
     width: 200px;
     margin: auto;
     margin-left: 50px;
+}
+
+.btn{
+    margin-left: 40%;
+    margin-bottom: 10px;
+    font-size: 15px;
+    font-weight: bold;
+    padding: 5px;
+    border-radius: 5px;
+    color:  #36454A;
+    background: -webkit-linear-gradient(top, #A4D3E0 , #A4D3E0 50%, #CBE3EB 50%);
+    background: -o-linear-gradient(top, #A4D3E0 , #A4D3E0 50%, #CBE3EB 50%);
+    background: linear-gradient(to top, #A4D3E0 , #A4D3E0 50%, #CBE3EB 50%);
+    box-shadow: 2px 2px 3px black;
 }
 .description{
     background: white;
@@ -30,13 +43,27 @@ ul{
     padding: 10px;
     box-sizing: content-box;
 }
-.logout{
-    margin-left: 50%;
-    color: green;
+.d {
+    background: white;
+    border-style: double;
+    border-width: 4px;
+    border-color: aqua;
+    padding: 5px;
+    text-align: center;
+    margin-left: 25%;
+    margin-right: 50%;
+    margin-bottom: 5px;
 }
+.category{
+    background: white;
+    border: 3px solid #00b0ff;
+    margin-left: 5%;
+    padding: 3px;
+}
+
 .menu-main{
     height: 100%;
-    width: 160px;
+    width: 18%;
     position: fixed;
     z-index: 1;
     top: 0;
@@ -45,6 +72,7 @@ ul{
     overflow-x: hidden;
     padding-top: 20px;
 }
+
 .menu-main a{
     padding: 6px 8px 6px 16px;
     text-decoration: none;
